# lightyears

./: CMakeLists.txt
AiEngine/: CMakeLists.txt
AiEngine/include/: EntryPoint.h
AiEngine/include/framework/: Actor.h  Application.h  Component.h  Core.h  Object.h  World.h
AiEngine/include/framework/component/: Component.h  SpriteRendererComponent.h
AiEngine/src/: EntryPoint.cpp
AiEngine/src/framework/: Actor.cpp  Application.cpp  Component.cpp  Object.cpp  World.cpp
AiEngine/src/framework/component/: Component.cpp  SpriteRendererComponent.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/src/gameFramework/: GameApplication.cpp
lightyears/: CMakeLists.txt
lightyears/include/framework/: application.h
lightyears/src/: main.cpp
lightyears/src/framework/: application.cpp
